fix post plus add delete in controller
